--- a/index.html
+++ b/index.html
@@ -43,32 +43,38 @@
                         <div class="grid-container">
                             <div class="form-entry" id="first-name">
                                 <label for="first-name">First Name</label>
-                                <input type="text" name="first-name">
+                                <input type="text" name="first-name" required>
+                                <div></div>
                             </div>
                             <div class="form-entry" id="last-name">
                                 <label for="last-name">Last Name</label>
-                                <input type="text" name="last-name">
+                                <input type="text" name="last-name" required>
+                                <div></div>
                             </div>
                             <div class="form-entry" id="email">
                                 <label for="email">Email Address</label>
-                                <input type="email" name="email">
+                                <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                                <div></div>
                             </div>
                             <div class="form-entry" id="phone-number">
                                 <label for="phone-number">Phone Number</label>
-                                <input type="tel" name="phone-number">
+                                <input type="tel" name="phone-number" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}" required>
+                                <div></div>
                             </div>
                             <div class="form-entry" id="password">
                                 <label for="password">Password</label>
-                                <input type="text" name="password">
+                                <input type="text" name="password" required>
+                                <div></div>
                             </div>
                             <div class="form-entry" id="password-confirm">
                                 <label for="password-confirm">Confirm Password</label>
-                                <input type="text" name="password-confirm">
+                                <input type="text" name="password-confirm" required>
+                                <div></div>
                             </div>
                         </div>
                     </div>
                     <div class="form-submit-container">
-                        <button type="submit">Create Account</button>
+                        <input type="submit" value="Create Account"></input>
                         <p>Or if you have an account, <a href="#">Log in</a></p>
                     </div>
                 </form>
